# voidling

./: .env.example  .gitignore  README.md  compose-mac.yml  compose.yml
bot-actions-server/: .gitignore  Dockerfile  README.md  pyproject.toml
bot-actions-server/voidling_actions/: __init__.py  action_lore_query.py  action_populate_summoner_info.py  action_retrieve_match_history.py  validate_summoner_name_form.py
bot-core/: README.md  config.yml  domain.yml  pyproject.toml  story_graph.dot
bot-core/.config/rasa/: global.yml
bot-core/data/: nlu.yml  rules.yml  stories.yml
data-service/: .gitignore  Dockerfile  README.md  pyproject.toml
data-service/data_service/: app.py  lore_scraper.py  server.py
data-service/data_service/api/: lore_qa.py  match_history.py  summoner_info.py
data-service/data_service/data_dragon/: champions.py  util.py
data-service/data_service/database/: __init__.py  connection.py  lore_store.py  summoner_store.py
data-service/data_service/doc_qa/: __init__.py  answer_qa.py  types.py
data-service/data_service/doc_ranking/: __init__.py  ranker.py  vectorizer.py
data-service/data_service/riot_api/: constants.py  match.py  summoner.py  types.py
data-service/data_service/scripts/: lore_downloader.py  lore_qa_test_suite.py  lore_scraper.py  lore_vectorizer.py
data-service/data_service/universe_lore/: __init__.py  champ_slugs.py  lore.py
discord-plugin/: Dockerfile  README.md  pyproject.toml
discord-plugin/voidling_discord/: __main__.py  client.py  startup.py
discord-plugin/voidling_discord/message_processor/: __init__.py  response_builder.py  sender.py  types.py
