[tool.poetry]
name = "data-service"
version = "0.1.0"
description = ""
authors = ["Aditya Rathod <15635979+adityarathod@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"
pymongo = "^4.3.3"
scikit-learn = "^1.2.2"
nltk = "^3.8.1"
scipy = "^1.10.1"
numpy = "^1.24.2"
transformers = {extras = ["pytorch"], version = "^4.27.4"}
flask = "^2.2.3"
torch = "^2.0.0"
sanic = "^23.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
